# language-service

./: Cargo.toml
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/messages/: mod.rs
crates/core/src/messages/codec/: decode.rs  encode.rs  mod.rs
crates/core/src/messages/core/: notification.rs  request.rs  response.rs
crates/core/src/messages/groups/: mod.rs  notifications.rs  requests.rs  responses.rs
crates/core/src/messages/payload/: headers.rs  mod.rs
crates/core/src/service/: backend.rs  error.rs  filter.rs  frontend.rs  mod.rs
crates/json-rpc/: Cargo.toml
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs
crates/messages/src/codec/: decode.rs  encode.rs  headers.rs  mod.rs
crates/messages/src/core/: mod.rs  request.rs  response.rs
crates/messages/src/groups/: mod.rs  notifications.rs  requests.rs  responses.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs
crates/protocol/src/codec/: decode.rs  encode.rs  headers.rs  mod.rs
crates/protocol/src/json_rpc/: mod.rs  notification.rs  request.rs  response.rs
crates/protocol/src/messages/: error.rs  mod.rs  response.rs
