[workspace]
resolver = "2"

members = [ 
  "crates/*"
]

[workspace.dependencies]
bytes = "1"
derive_more = "0.99"
httparse = "1"
indoc = "2"
once_cell = "1"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
strum = "0.25"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter" ] }
test-log = { version = "0.2", default-features = false, features = ["trace"]}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# TEMP:
# https://github.com/gluon-lang/lsp-types/pull/265
# https://github.com/gluon-lang/lsp-types/pull/266
# https://github.com/gluon-lang/lsp-types/pull/267
# https://github.com/gluon-lang/lsp-types/pull/268
lsp-types = { git = "https://github.com/gibbz00/lsp-types", branch = "mixed_features" }
