[package]
name = "spique-core"
version = "0.0.1"
edition = "2021"

[dependencies]
bytes.workspace = true
derive_more.workspace = true
futures.workspace = true
httparse.workspace = true
lsp-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }

[dev-dependencies]
once_cell.workspace = true
indoc.workspace = true
tokio-test.workspace = true