[package]
name = "language-service-messages"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
strum = { version = "0.25", features = ["derive"] }
serde_json = "1"
lsp-types.workspace = true

derive_more = "0.99"
httparse = "1"

[dev-dependencies]
once_cell = "1"
indoc = "2"