[package]
name = "language-service-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.94"
derive_more = "0.99"
httparse = "1"

[dev-dependencies]
once_cell = "1"
indoc = "2"